[package]
name = "sakurai"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/arrangedev/sakurai"

[lib]
name = "sakurai"
path = "src/lib.rs"

[[bench]]
name = "std-comparisons"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.fast]
inherits = "dev"
lto = true
panic = "abort"
codegen-units = 1